--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+*{
+    padding : 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body {
-    padding: 20px;
+    background-color: #fff5e1;
+    display : flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    border: 1px solid black;
 }
