react-hook-form modify

--- a/src/components/form.css
+++ b/src/components/form.css
@@ -4,6 +4,7 @@
   background-color: #e6f7ff;
   display: flex;
   flex-direction: column;
+  margin-top : 2rem;
 }
 .signup-but {
     font-size : 20px;
