--- a/src/components/form.css
+++ b/src/components/form.css
@@ -1,14 +1,18 @@
 .form-container {
-  width: 600px;
+  width: 80%;
+  height: auto;
   padding  : 5rem 3rem;
   background-color: #e6f7ff;
+  opacity: 0.8;
   display: flex;
   flex-direction: column;
-  margin-top : 2rem;
+  margin : 3rem auto;
+  border-radius: 25px ;
 }
 .signup-but {
     font-size : 20px;
-    width: 30%;
+    width: 300px;
+    margin: 1rem auto;
 }
 .error-messages {
   margin-top: 1rem;
