--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,21 @@
     box-sizing: border-box;
 }
 body {
-    background-color: #fff5e1;
     display : flex;
     justify-content: center;
     align-items: center;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    background-size: cover;
+    background-image: url('https://images.pexels.com/photos/3728311/pexels-photo-3728311.jpeg?auto=compress&cs=tinysrgb&w=1600');
+}
+.app{
     width: 100vw;
-    height: 100vh;
-    border: 1px solid black;
+    height: 100%;
+    min-width: 400px;
+}
+h1 {
+    text-align: center;
+    margin: 2rem;
+    color : #fff
 }
